# colorpickle

./: Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-1-link  flake-profile-2-link
.github/workflows/: build_nix.yml
src/: main.rs  utils.rs
