[package]
name = "colorpickle"
version = "0.1.1"
edition = "2021"
authors = ["Agatha V. Lovelace <agatha@technogothic.net>"]
description = "A colorscheme generator"
license = "NVPLv7+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pastel = "0.9.0"
color-thief = "0.2.2"
miette = { version = "5.7.0", features = ["fancy"] }
image = "0.24.6"
clap = { version = "4.2.1", features = ["derive"] }
