[package]
name = "colorpickle"
version = "0.2.0"
edition = "2021"
authors = ["Agatha V. Lovelace <agatha@technogothic.net>"]
description = "A colorscheme generator"
license = "NVPLv7+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
color-thief = "0.2.2"
image = "0.24.7"
miette = { version = "5.10.0", features = ["fancy"] }
nalgebra = "0.32.3"
okolors = "0.4.0"
pastel = "0.9.0"
