[package]
name = "colorpickle"
version = "0.2.0"
edition = "2021"
authors = ["Agatha V. Lovelace <agatha@technogothic.net>"]
description = "A colorscheme generator"
license = "NVPLv7+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
color-thief = "0.2.2"
image = "0.24.7"
miette = { version = "5.10.0", features = ["fancy"] }
okolors = "0.4.0"
pastel = { git = "https://github.com/sharkdp/pastel.git", rev = "f205dec1952808ed3c33e9bc5ad98d0dccb19f74" }
